--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^144.0.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "stream": "^0.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
